# level3_cv_finalproject-cv-03

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: testing.yaml
dreambooth/: inference.py  run.py
scratch/: Makefile  bigquery_logger.py  cloud_storage_manager.py  fastapi-server.py  gpt3_api.py  main.py  model.py  streamlit-frontend-eng.py  streamlit-frontend-kr.py  streamlit.py  streamlit_frontend.py  utils.py
scratch/dags/: airflow-bigquery.py
src/: __init__.py
src/redis_celery/: Makefile  __init.py  __init__.py  gpt3_api.py  main.py  streamlit_frontend.py  utils.py  worker.py
src/redis_celery/gcp/: bigquery.py  cloud_storage.py  error.py
src/scratch/: Makefile  __init__.py  gpt3_api.py  main.py  model.py  streamlit_frontend.py  train_dreambooth.py  translation.py  worker_dreambooth.py  worker_sd.py  worker_sdxl.py
src/scratch/apache_config/: apache2.conf  ports.conf  project_website.conf
src/scratch/dags/: __init__.py  airflow-bigquery.py  airflow_bigquery.py  bigquery_data_pipeline.py  model_retrain.py
src/scratch/dreambooth/: dreambooth.yaml  inference.py  run.py
src/scratch/gcp/: __init__.py  bigquery.py  cloud_storage.py  error.py
src/scratch/htdocs/: create.html  index.html  main.html  mypage.html
src/scratch/htdocs/js/: album.js  main.js  mypage.js
src/scratch/htdocs/styles/: album.css
src/stable_diffusion/: __init__.py  dataset.py  main.py  test.py  train.py
src/stable_diffusion/utils/: __init__.py  training.py
src/stable_diffusion_xl/: __init__.py  config.yaml  dataset.py  inference.py  main.py  run.py  test.py  train.py
src/stable_diffusion_xl/experiments/[tag]ExpName/: albums.csv  prompts.txt
src/stable_diffusion_xl/utils/: __init__.py  training.py  util.py
stable_diffusion/: dataset.py  main.py  train.py
stable_diffusion/utils/: plot.py
tests/: __init__.py
tests/scratch/: __init__.py  conftest.py  test_config.py  test_main.py
